changed gallery bg and fixed some spacing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1634,6 +1634,7 @@ header {
 
 // o nama
 #onama {
+	padding-bottom: 40px;
 	h2 {
 		padding-top: 0px;
 	}
@@ -1711,9 +1712,16 @@ header {
 
 //galerija+bike section
 #galery {
-	padding-top: 80px;
 	padding-bottom: 80px;
-	background: $bg-white;
+	padding-bottom: 80px;
+	background: $pink-gradient;
+	background-image: url(../img/bg-galery3.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	h2 {
+		color: $bg-white;
+	}
 	h3 {
 		margin-bottom: 20px;
 		text-align: center;
@@ -1827,25 +1835,39 @@ header {
 @include xxs {
 	.imgwrapper {
 		border-radius: 3px;
-		width: 32%;
+		width: 24%;
 		float: left;
 		position: relative;
 		overflow: hidden;
 		transition: 0.6s ease-in-out;
 		-webkit-transition: 0.6s ease-in-out;
 		z-index: 400;
-		margin: 0.5%;
+		margin: 0.3%;
 	}
 }
+@include xs {
+	.imgwrapper {
+		border-radius: 3px;
+		width: 13%;
+		float: left;
+		position: relative;
+		overflow: hidden;
+		transition: 0.6s ease-in-out;
+		-webkit-transition: 0.6s ease-in-out;
+		z-index: 400;
+		margin: 0.1%;
+	}
+}
+
 @include md {
 	.imgwrapper {
 		border-radius: 3px;
-		width: 19%;
+		width: 13%;
 		float: left;
 		position: relative;
 		overflow: hidden;
 
-		margin: 0.3%;
+		margin: 0.1%;
 	}
 }
 .imgwrapper img {
